--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,4 +1,5 @@
 --- 
+import { ViewTransitions } from 'astro:transitions';
 import '../styles/global.css';
 // 1. The frontmatter prop gives access to frontmatter and other data
 const { frontmatter } = Astro.props;
@@ -13,6 +14,7 @@ const { frontmatter } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="https://afoo.me/favicon.svg">
     <title>{frontmatter.title}</title>
     <script src="https://unpkg.com/htmx.org@1.9.5"></script>
+    <ViewTransitions/>
   </head>
   <body>
   	<nav>
