--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -1,14 +1,42 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from '../../layouts/Layout.astro';
 
+export async function getStaticPaths({ paginate }) {
+	const blogs = await Astro.glob('./*.md');
+	return paginate(blogs, { pageSize: 11 });
+	// return paginate(blogs.sort((a, b) => new Date(a.frontmatter.date) - new Date(b.frontmatter.date)).reverse(), { pageSize: 11 });
+}
+const { page } = Astro.props;
 // const pathname = new URL(Astro.request.url).pathname.split('/');
 ---
 
 <Layout title="Luomoe">
 	<main>
 		<h1>Luo . <span class="text-gradient">moe</span></h1>
-		<a href="/posts/1">Posts</a>
+		<section class="section blog-section" id="blog-section">
+			<div class="container">
+			  <h2 class="section-title">Our Blog</h2>
+			  <ul class="blogs">
+				{page.data.map((blog) =>
+				  <li>
+					<article class="blog">          
+					<!-- 
+					  <img src={blog.frontmatter.image.url} alt="blog.frontmatter.image.alt" />
+					-->
+					  <h3>{blog.frontmatter.title}</h3>
+					  <p>{blog.frontmatter.description}</p>
+					  <a href={blog.url} class="text-white">Read more</a>
+					</article>            
+				  </li>
+				)}
+			  </ul>
+			</div>
+		  </section>
+		  <h1>Page {page.currentPage}</h1>
+		  <div>
+			{page.url.prev ? <a href={page.url.prev}>Previous</a> : null}
+			{page.url.next ? <a href={page.url.next}>Next</a> : null}
+		  </div>
 	</main>
 </Layout>
 
