--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-html{
+/* html{
     scroll-behavior: smooth;   
 }
 body {
@@ -32,4 +32,4 @@ nav{
 }
 nav a, footer div a{
    margin-right: 1rem;
-}
+} */
