--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -1,5 +1,4 @@
 ---
-import '../../styles/global.css';
 import { ViewTransitions } from 'astro:transitions';
 export async function getStaticPaths({ paginate }) {
 	const blogs = await Astro.glob('./*.md');
@@ -35,8 +34,8 @@ const { page } = Astro.props;
 		<h1>Luo . <span class="text-gradient">moe</span></h1>
 		<section class="section blog-section" id="blog-section">
 			<div class="container">
-			  <h2 class="section-title">Our Blog</h2>
-			  <ul class="blogs">
+			  <h2 class="section-title">文章列表</h2>
+			  <ul class="blogs list-none">
 				{page.data.map((blog) =>
 				  <li>
 					<article class="blog">          
@@ -44,19 +43,51 @@ const { page } = Astro.props;
 					  <img src={blog.frontmatter.image.url} alt="blog.frontmatter.image.alt" />
 					-->
 					  <h2><a href={blog.url}>{blog.frontmatter.title}</a></h2>
-					  <p>{blog.frontmatter.description}</p>
-					  <a href={blog.url}>Read more</a>
+					  <p>{blog.frontmatter.description} 👉 <a href={blog.url} class="text-sm">Read more</a></p>
 					</article>            
 				  </li>
 				)}
 			  </ul>
 			</div>
 		  </section>
-		  <h3>Page {page.currentPage}</h3>
-		  <div>
-			{page.url.prev ? <a href={page.url.prev}>Previous</a> : null}
-			{page.url.next ? <a href={page.url.next}>Next</a> : null}
-		  </div>
+		  <div class="flex items-center justify-center py-10 lg:px-0 sm:px-6 px-4">
+			<!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
+			
+					<div class="lg:w-3/5 w-full  flex items-center justify-between border-t border-gray-200">
+						<div class="flex items-center pt-3 text-gray-600 hover:text-indigo-700 cursor-pointer">
+							<svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M1.1665 4H12.8332" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+								<path d="M1.1665 4L4.49984 7.33333" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+								<path d="M1.1665 4.00002L4.49984 0.666687" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+								</svg>
+								<p class="text-sm ml-3 font-medium leading-none ">
+									{page.url.prev ? <a href={page.url.prev}>Previous</a> : <span>Previous</span>}	
+								</p>                    
+						</div>
+						<div class="sm:flex hidden">
+							
+							<p class="text-sm font-medium leading-none cursor-pointer text-indigo-700 border-t border-indigo-400 pt-3 mr-4 px-2">
+								<a href={page.url.current}>{page.currentPage}</a>
+							</p>
+							<!--
+							<p class="text-sm font-medium leading-none cursor-pointer text-gray-600 hover:text-indigo-700 border-t border-transparent hover:border-indigo-400 pt-3 mr-4 px-2">8</p>
+							-->
+						</div>
+						<div class="flex items-center pt-3 text-gray-600 hover:text-indigo-700 cursor-pointer">
+							<p class="text-sm font-medium leading-none mr-3">
+								{page.url.next ? <a href={page.url.next}>Next</a>:<span>Next</span>}
+							</p>
+							<svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M1.1665 4H12.8332" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+								<path d="M9.5 7.33333L12.8333 4" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+								<path d="M9.5 0.666687L12.8333 4.00002" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+								</svg>
+								
+						</div>
+					</div>
+				</div>
+
+
     </main>
 	<hr class="my-6"/>
 
