--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -20,9 +20,9 @@ const { frontmatter } = Astro.props;
     <ViewTransitions />
   </head>
   <body>
-    <div class="container mx-auto p-6">
+    <div class="container mx-auto p-6 w-full lg:w-1/2">
       
-      <nav class="space-x-6 mb-12">
+      <nav class="space-x-6 mt-6 mb-12">
         <a href="/">Home</a>
         <a href="https://afoo.me">Author</a>
         <a href="https://edu.afoo.me">AI Courses</a>
@@ -36,7 +36,7 @@ const { frontmatter } = Astro.props;
       </main>
       <hr class="my-6"/>
 
-      <div hx-get="https://toolfooter.afoo.me/" hx-trigger="revealed"/>
+      <div hx-get="https://toolfooter.afoo.me/" hx-trigger="load delay:3s, revealed"/>
       <footer class="mt-12">
         <div>
           <img
