--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -17,7 +17,7 @@ const { frontmatter } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="https://afoo.me/favicon.svg" />
     <title>{frontmatter.title}</title>
     <script src="https://unpkg.com/htmx.org@1.9.5"></script>
-    <ViewTransitions />
+    <ViewTransitions fallback="swap"/>
   </head>
   <body>
     <div class="container mx-auto p-6 w-full lg:w-1/2">
