--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -33,6 +33,9 @@ const { frontmatter } = Astro.props;
           {frontmatter.pubDate.substring(0, 10)}
         </div>
         <slot />
+        <div>
+          <button onclick="history.back()" class="border py-1 px-3 rounded">返回(Go Back)</button>
+        </div>
       </main>
       <hr class="my-6"/>
 
