--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,25 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Luomoe">
-	<main class="container mx-auto p-6 prose lg:prose-xl">
-		<h1>Luo . <span class="text-gradient">moe</span></h1>
-		<a href="/posts/1">Posts</a>
-	</main>
+	<!-- <main class="container mx-auto"> -->
+		<div class="flex flex-col mx-auto p-6 justify-center items-center h-full">
+			<h1 class="text-6xl lg:text-9xl font-bold colorful">Luo.moe</h1>
+			<a href="/posts/1" class="border-b">罗密欧的故事汇</a>
+			<!-- <span class="inline-block px-2 py-2 relative text-3xl text-white bg-red-600" style="border-radius: 91% 9% 90% 10% / 29% 82% 18% 71%">deadline!</span> -->
+		</div>
+
+	<!-- </main> -->
 </Layout>
+
+<style>
+	  .colorful {
+        background-image: linear-gradient(
+          45deg,
+          #fe3300,
+          #005ff3
+        );
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+</style>
