--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -2,7 +2,7 @@
 import { ViewTransitions } from 'astro:transitions';
 export async function getStaticPaths({ paginate }) {
 	const blogs = await Astro.glob('./*.md');
-	return paginate(blogs, { pageSize: 11 });
+	return paginate(blogs.sort((a, b) => Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontmatter.pubDate)), { pageSize: 11 });
 	// return paginate(blogs.sort((a, b) => new Date(a.frontmatter.date) - new Date(b.frontmatter.date)).reverse(), { pageSize: 11 });
 }
 const { page } = Astro.props;
