--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -18,6 +18,8 @@ const { page } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="https://afoo.me/favicon.svg">
     <title>故事列表</title>
     <script src="https://unpkg.com/htmx.org@1.9.5"></script>
+	<link href="/_pagefind/pagefind-ui.css" rel="stylesheet">
+	<script src="/_pagefind/pagefind-ui.js" type="text/javascript"></script>
     <ViewTransitions/>
   </head>
   <body>
@@ -33,6 +35,7 @@ const { page } = Astro.props;
 			<h1>罗密欧的故事汇</h1>
 		<section class="section blog-section" id="blog-section">
 			<div class="container">
+				<div id="search" class="ml-3 p-4 -mt-8"></div>
 			  <!-- <h2 class="section-title">小故事列表</h2> -->
 			  <ul class="blogs list-none">
 				{page.data.map((blog) =>
