--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Layout from "../layouts/Layout.astro";
   <!-- </main> -->
 </Layout>
 
-<style>
+<style is:global>
   .colorful {
     background-image: linear-gradient(45deg, #fe3300, #005ff3);
     background-clip: text;
