--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,41 @@ const { title } = Astro.props;
 	<body>
 		<slot />
 	</body>
+	<script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
+	<script>
+	  /* paste this line in verbatim */
+	  window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments)};
+	  /* customize formbutton below*/     
+	  formbutton("create", {
+	    action: "https://formspree.io/f/xknlpkkd",
+	    title: "有什么可以帮到您？💕💕💕 How can I help you?",
+	    fields: [
+	      { 
+	        type: "email", 
+	        label: "您的电子邮箱（方便与您联系）:", 
+	        name: "email",
+	        required: true,
+	        placeholder: "your@email.com"
+	      },
+	      {
+	        type: "textarea",
+	        label: "您想提交的反馈和询问信息:",
+	        name: "message",
+	        placeholder: "What's on your mind?",
+	      },
+	      { type: "submit" }      
+	    ],
+	    styles: {
+	      title: {
+	        backgroundColor: "blue"
+	      },
+	      button: {
+	        backgroundColor: "blue"
+	      }
+	    }
+	  });
+	</script>
+
 </html>
 <style is:global>
 	::-webkit-scrollbar {
