--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -155,5 +155,40 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).href;
         document.querySelector('#header nav')?.classList.add('hidden');
       };
     </script>
+
+    <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
+    <script>
+      /* paste this line in verbatim */
+      window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments)};
+      /* customize formbutton below*/     
+      formbutton("create", {
+        action: "https://formspree.io/f/xknlpkkd",
+        title: "有什么可以帮到您？💕💕💕 How can I help you?",
+        fields: [
+          { 
+            type: "email", 
+            label: "您的电子邮箱（方便与您联系）:", 
+            name: "email",
+            required: true,
+            placeholder: "your@email.com"
+          },
+          {
+            type: "textarea",
+            label: "您想提交的反馈和询问信息:",
+            name: "message",
+            placeholder: "What's on your mind?",
+          },
+          { type: "submit" }      
+        ],
+        styles: {
+          title: {
+            backgroundColor: "blue"
+          },
+          button: {
+            backgroundColor: "blue"
+          }
+        }
+      });
+    </script>
   </body>
 </html>
