add more crosslinks and fix twitter link

--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -30,6 +30,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).href;
         <a href="https://afoo.me">Author</a>
         <a href="https://edu.afoo.me">AI Courses</a>
         <a href="https://store.afoo.me">Fuqiang Store</a>
+        <a href="https://jiagoubaike.com">架构百科</a>
+        <a href="https://scala.afoo.me">Scala</a>
+        <a href="https://honojs.afoo.me">Honojs</a>
       </nav>
       <main class="prose lg:prose-xl">
         <div style="color:gray; font-size: x-small; margin-bottom: 1rem;">
@@ -54,7 +57,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).href;
             Rights Reserved.
           </div>
           <div class="mx-auto flex flex-col justify-center self-center items-center">
-            <a href="https://x.com/fujohnwang" class="flex inline items-center mt-2">
+            <a href="https://x.afoo.me" class="flex inline items-center mt-2">
               <svg
                 viewBox="0 0 24 24"
                 width="2rem"
@@ -71,7 +74,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).href;
                 >
                 </path>
               </svg>
-               @fujohnwang</a
+               @afoo_me</a
             >
           </div>
         </div>
