--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -29,6 +29,9 @@ const { page } = Astro.props;
 		  <a href="https://afoo.me">Author</a>
 		  <a href="https://edu.afoo.me">AI Courses</a>
 		  <a href="https://store.afoo.me">Fuqiang Store</a>
+		  <a href="https://jiagoubaike.com">架构百科</a>
+		  <a href="https://scala.afoo.me">Scala</a>
+		  <a href="https://honojs.afoo.me">Honojs</a>
 		</nav>
 
 		<main class="prose lg:prose-xl">
@@ -101,7 +104,7 @@ const { page } = Astro.props;
             Rights Reserved.
           </div>
           <div class="mx-auto flex flex-col justify-center self-center items-center">
-            <a href="https://x.com/fujohnwang" class="flex inline items-center mt-2">
+            <a href="https://x.afoo.me" class="flex inline items-center mt-2">
               <svg
                 viewBox="0 0 24 24"
                 width="2rem"
@@ -118,7 +121,7 @@ const { page } = Astro.props;
                 >
                 </path>
               </svg>
-               @fujohnwang</a
+               @afoo_me</a
             >
           </div>
         </div>
