--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -35,6 +35,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).href;
         <a href="https://honojs.afoo.me">Honojs</a>
       </nav>
       <main class="prose lg:prose-xl">
+        <h1>{frontmatter.title}</h1>
         <div style="color:gray; font-size: x-small; margin-bottom: 1rem;">
           {frontmatter.pubDate.substring(0, 10)}
         </div>
